compiler/testData/diagnostics/tests/unsignedTypes/callDefaultConstructorOfUnsignedType.fir.kt
val foo = <!INAPPLICABLE_CANDIDATE!>UInt<!>()
